Changed outdated lucene OpenBitSet to Java util BitSet, changed all JDK versions to 1.8, resolved a bug in FAIDA, and did some refactoring.